--- a/sass/layout/_sect-members.scss
+++ b/sass/layout/_sect-members.scss
@@ -66,7 +66,7 @@ line-height: 1.19;
 text-align: center;
 letter-spacing: 0.03em;
 color: $primery-text-color;
-border-bottom: 2px solid  #F5F4FA;;
+//border-bottom: 2px solid  #F5F4FA;;
     }
 
    & .s {
