--- a/sass/layout/_sect-preferens.scss
+++ b/sass/layout/_sect-preferens.scss
@@ -28,7 +28,6 @@
  @media screen and (min-width:768px) {
    display: flex;
     flex-wrap: wrap;
-      
  }
 
  @media screen and (min-width:1200px) {
@@ -42,7 +41,7 @@
     & .preference__items{
     @media screen and (min-width:768px) {
      width: calc((100% - 60px)/2);
-        
+      margin: 15px;  
    }
    
  }
@@ -55,12 +54,16 @@
             
             margin-left: 30px;
             
-            @media screen and (max-width:768px) {
-               margin: 0;
+            @media screen and (max-width:767px) {
+               margin: 0px;
 
                
              }
-
+             @media screen and (min-width:768px) {
+                margin: 10px;
+ 
+                
+              }
             
 
              
