--- a/sass/layout/_sect-sing.scss
+++ b/sass/layout/_sect-sing.scss
@@ -29,6 +29,11 @@
    margin-left: 150px;
   width: 450px;
   }
+  @media screen and (min-width:1200px){
+    // margin-top: 100px;
+   margin-left: 90px;
+  //width: 450px;
+  }
   
     width: 300px;
     height: 50px;
