--- a/sass/layout/_sect-addition.scss
+++ b/sass/layout/_sect-addition.scss
@@ -14,6 +14,10 @@
 @media screen and (min-width:768px) and (max-width:1199px)  {
 margin-left: 300px;
 }
+@media screen and (min-width:1200px)  {
+   margin-left: 90px;
+   
+   }
     /* margin-right: 868px;  */
    font-weight: 700;
 font-size: 14px;
