--- a/sass/layout/_sect-clients.scss
+++ b/sass/layout/_sect-clients.scss
@@ -53,7 +53,7 @@ margin: 10px 70px;
     height: 100%;
     display: flex;
     background-color:#F5F5F5;
-    border: 1px solid #AFB1B8;
+   // border: 1px solid #AFB1B8;
 border-radius: 4px;
     transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
